--- a/app/client/src/locales/de.json
+++ b/app/client/src/locales/de.json
@@ -2,46 +2,46 @@
   "Home": "Start",
   "Browse": "Durchsuchen",
   "Library": "Mediathek",
-  "Tracks": "Titel",
-  "Playlists": "Wiedergabelisten",
+  "Tracks": "Songs",
+  "Playlists": "Playlists",
   "Albums": "Alben",
-  "Artists": "Künstler",
+  "Artists": "Künstler*innen",
   "More": "Mehr",
   "Settings": "Einstellungen",
   "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Suche oder füge Deezer URL ein. Benutze \"/\" um schnell zu fokussieren.",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Suche oder füge eine Deezer URL ein. Benutze \"/\" um schnell zu fokussieren.",
   "Play": "Wiedergeben",
   "Add to library": "Zur Mediathek hinzufügen",
   "Download": "Download",
   "fans": "Fans",
   "tracks": "Titel",
   "Quality": "Qualität",
-  "Estimated size:": "Geschätzte Zeit:",
+  "Estimated size:": "Geschätzte Größe:",
   "Start downloading": "Download beginnen",
   "Cancel": "Abbrechen",
   "Stream logging is disabled!": "Streamprotokollierung ist deaktiviert!",
   "Enable it in settings for history to work properly.": "Aktiviere es in den Einstellungen, damit der Verlauf korrekt funktioniert.",
   "History": "Verlauf",
   "Create new playlist": "Neue Playlist erstellen",
-  "TRACKS": "Titel",
+  "TRACKS": "SONGS",
   "Sort by": "Sortieren nach",
   "Date Added": "Hinzugefügt am",
   "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Künstler (A-Z)",
+  "Artist (A-Z)": "Künstler*innen (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Fehler beim Laden der Songtexte oder Songtexte nicht gefunden!",
+  "Error loading lyrics or lyrics not found!": "Fehler beim Laden der Songtexte bzw. Songtexte nicht gefunden!",
   "Create playlist": "Playlist erstellen",
   "Create": "Erstellen",
   "Add to playlist": "Zur Playlist hinzufügen",
   "Create new": "Neu erstellen",
   "Remove": "Entfernen",
-  "Play next": "Als nächstes spielen",
+  "Play next": "Als Nächstes abspielen",
   "Add to queue": "Zur Warteschleife hinzufügen",
   "Remove from library": "Aus der Mediathek entfernen",
   "Remove from playlist": "Aus Playlist entfernen",
-  "Play track mix": "Track Mix abspielen",
+  "Play track mix": "Songmix abspielen",
   "Go to": "Gehe zu",
-  "Track Mix": "Track Mix",
+  "Track Mix": "Songmix",
   "Duration": "Dauer",
   "Released": "Veröffentlicht",
   "Disk": "Disk",
@@ -61,7 +61,7 @@
   "Playing from": "Wiedergabe von",
   "Info": "Info",
   "Lyrics": "Lyrics",
-  "Track number": "Titelnummer",
+  "Track number": "Songnummer",
   "Disk number": "Disk-Nummer",
   "Explicit": "Explizit",
   "Source": "Quelle",
@@ -74,28 +74,28 @@
   "...or paste your ARL/Token below:": "...oder füge dein ARL/Token unten ein:",
   "ARL/Token": "ARL/Token",
   "Login": "Anmeldung",
-  "By using this program, you disagree with Deezer's ToS.": "Durch die Verwendung dieses Programms lehnen Sie Deezer's ToS ab.",
+  "By using this program, you disagree with Deezer's ToS.": "Durch die Verwendung dieses Programms lehnst du die Nutzungsbedingungen von Deezer ab.",
   "Only in Electron version!": "Nur in der Electron-Version!",
   "Search results for:": "Suchergebnisse für:",
   "Error loading data!": "Fehler beim Laden der Daten!",
   "Try again later!": "Versuch's später nochmal!",
   "Search": "Suche",
   "Streaming Quality": "Streamqualität",
-  "Download Quality": "Download-Qualität",
+  "Download Quality": "Downloadqualität",
   "Downloads Directory": "Downloadverzeichnis",
   "Simultaneous downloads": "Gleichzeitige Downloads",
   "Always show download confirm dialog before downloading.": "Downloadbestätigungsdialog immer vor dem Download anzeigen.",
   "Show download dialog": "Download-Dialog anzeigen",
-  "Create folders for artists": "Ordner für Künstler erstellen",
+  "Create folders for artists": "Ordner für Künstler*innen erstellen",
   "Create folders for albums": "Ordner für Alben erstellen",
   "Download lyrics": "Download Lyrics",
   "Variables": "Variablen",
   "UI": "Benutzeroberfläche",
   "Show autocomplete in search": "Auto-Vervollständigung in der Suche anzeigen",
   "Integrations": "Integrationen",
-  "This allows listening history, flow and recommendations to work properly.": "Dies ermöglicht das korrekte Arbeiten von Wiedergabeverlauf, Flow und Empfehlungen.",
+  "This allows listening history, flow and recommendations to work properly.": "Dies ermöglicht, dass der Wiedergabeverlauf, Flow und Empfehlungen korrekt funktionieren.",
   "Log track listens to Deezer": "Prokotolliere gehörte Titel auf Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Verbinde dein LastFM-Konto, um das Scrobbing zu erlauben.",
+  "Connect your LastFM account to allow scrobbling.": "Verbinde dein LastFM-Konto, um das Scrobbling zu erlauben.",
   "Login with LastFM": "Anmelden mit LastFM",
   "Disconnect LastFM": "Disconnect LastFM",
   "Requires restart to apply!": "Erfordert einen Neustart der App!",
@@ -110,9 +110,9 @@
   "Settings saved!": "Einstellungen gespeichert!",
   "Available only in Electron version!": "Nur in der Electron-Version verfügbar!",
   "Crossfade (ms)": "Überblendung (ms)",
-  "Select primary color": "Primärfarbe auswählen",
+  "Select primary color": "Hauptfarbe auswählen",
   "Light theme": "Helles Thema",
-  "Create folders for playlists": "Ordner für Wiedergabelisten erstellen",
+  "Create folders for playlists": "Ordner für Playlists erstellen",
   "About": "Über",
   "Links:": "Links:",
   "Telegram Releases": "Telegram-Releases",
@@ -122,18 +122,18 @@
   "Credits:": "Credits:",
   "Agree": "Einverstanden",
   "Dismiss": "Verwerfen",
-  "Added to playlist!": "Zur Wiedergabeliste hinzugefügt!",
-  "Added to library!": "Zur Mediathek hinzufügen!",
-  "Removed from library!": "Aus der Mediathek entfernen!",
-  "Removed from playlist!": "Aus der Wiedergabeliste entfernt!",
-  "Playlist deleted!": "Wiedergabeliste gelöscht!",
+  "Added to playlist!": "Zur Playlist hinzugefügt!",
+  "Added to library!": "Zur Mediathek hinzufügt!",
+  "Removed from library!": "Aus der Mediathek entfernt!",
+  "Removed from playlist!": "Aus der Playlist entfernt!",
+  "Playlist deleted!": "Playlist gelöscht!",
   "Delete": "Löschen",
-  "Are you sure you want to delete this playlist?": "Bist du sicher, dass du diese Wiedergabeliste löschen willst?",
+  "Are you sure you want to delete this playlist?": "Bist du sicher, dass du diese Playlist löschen willst?",
   "Force white tray icon": "Erzwinge weißes Tray-Icon",
   "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Standardsymbol (weiß) in der Kontrollleiste erzwingen, wenn Design falsch erkannt wurde. Neustart erforderlich.",
   "Share": "Teilen",
   "Settings quality": "Audioqualität-Einstellungen",
-  "Content language": "Sprache des Inhalts",
+  "Content language": "Sprache der Inhalte",
   "Content country": "Land des Inhalts",
   "Website": "Webseite",
   "Visit website": "Webseite besuchen",
