--- a/app/client/src/locales/el.json
+++ b/app/client/src/locales/el.json
@@ -135,7 +135,7 @@
   "Settings quality": "Επιλογή ρυθμίσεων ποιότητας",
   "Content language": "Γλώσσα περιεχομένου",
   "Content country": "Χώρα περιεχομένου",
-  "Website": "Website",
-  "Visit website": "Visit website",
-  "New update available:": "New update available:"
+  "Website": "Ιστοσελίδα",
+  "Visit website": "Μετάβαση στην Ιστοσελίδα",
+  "New update available:": "Διαθέσιμη νέα ενημέρωση:"
 }
