--- a/app/client/src/locales/es.json
+++ b/app/client/src/locales/es.json
@@ -2,7 +2,7 @@
   "Home": "Inicio",
   "Browse": "Explorar",
   "Library": "Biblioteca",
-  "Tracks": "Pistas",
+  "Tracks": "Canciones",
   "Playlists": "Listas de reproducción",
   "Albums": "Álbumes",
   "Artists": "Artistas",
@@ -14,7 +14,7 @@
   "Add to library": "Añadir a la biblioteca",
   "Download": "Descargar",
   "fans": "seguidores",
-  "tracks": "pistas",
+  "tracks": "canciones",
   "Quality": "Calidad",
   "Estimated size:": "Tamaño estimado:",
   "Start downloading": "Comenzar descarga",
@@ -23,7 +23,7 @@
   "Enable it in settings for history to work properly.": "Habilítalo en los ajustes para que el historial funcione correctamente.",
   "History": "Historial",
   "Create new playlist": "Crear nueva lista de reproducción",
-  "TRACKS": "PISTAS",
+  "TRACKS": "CANCIONES",
   "Sort by": "Ordenar por",
   "Date Added": "Fecha de adición",
   "Name (A-Z)": "Nombre (A-Z)",
@@ -94,7 +94,7 @@
   "Show autocomplete in search": "Mostrar autocompletado al buscar",
   "Integrations": "Integraciones",
   "This allows listening history, flow and recommendations to work properly.": "Esto permite registrar el historial, para que flow y las recomendaciones funcionen correctamente.",
-  "Log track listens to Deezer": "Enviar registro de reproducción a Deezer",
+  "Log track listens to Deezer": "Registrar la canción que escucha a Deezer",
   "Connect your LastFM account to allow scrobbling.": "Conecta tu cuenta de LastFM para permitir sincronizar tus canciones.",
   "Login with LastFM": "Iniciar sesión con LastFM",
   "Disconnect LastFM": "Desconectar LastFM",
