--- a/app/client/src/locales/id.json
+++ b/app/client/src/locales/id.json
@@ -135,7 +135,7 @@
   "Settings quality": "Pengaturan kualitas",
   "Content language": "Bahasa konten",
   "Content country": "Wilayah konten",
-  "Website": "Website",
-  "Visit website": "Visit website",
-  "New update available:": "New update available:"
+  "Website": "Situs",
+  "Visit website": "Kunjungi situs web",
+  "New update available:": "Pembaruan tersedia:"
 }
