--- a/app/client/src/locales/it.json
+++ b/app/client/src/locales/it.json
@@ -84,17 +84,17 @@
   "Download Quality": "Qualità Download",
   "Downloads Directory": "Cartella Download",
   "Simultaneous downloads": "Download simultanei",
-  "Always show download confirm dialog before downloading.": "Mostra sempre la conferma di download prima di scaricare.",
+  "Always show download confirm dialog before downloading.": "Mostra sempre la finestra di conferma download prima di scaricare.",
   "Show download dialog": "Mostra finestra di download",
   "Create folders for artists": "Crea cartelle per gli artisti",
   "Create folders for albums": "Crea cartelle per gli album",
-  "Download lyrics": "Scarica testo",
+  "Download lyrics": "Scarica testi .LRC",
   "Variables": "Variabili",
   "UI": "Interfaccia",
   "Show autocomplete in search": "Mostra elenco autocompletamento",
   "Integrations": "Integrazioni",
-  "This allows listening history, flow and recommendations to work properly.": "Questo permette di usare la cronologia, il Flow e le raccomandazioni per funzionare correttamente.",
-  "Log track listens to Deezer": "Registra gli ascolti delle tracce a Deezer",
+  "This allows listening history, flow and recommendations to work properly.": "Abilitalo se vuoi che la cronologia, il Flow e i raccomandazioni funzionino correttamente.",
+  "Log track listens to Deezer": "Logging cronologia degli ascolti",
   "Connect your LastFM account to allow scrobbling.": "Collega il tuo account LastFM per consentire lo scrobbling.",
   "Login with LastFM": "Accedi con LastFM",
   "Disconnect LastFM": "Disconnetti LastFM",
@@ -115,10 +115,10 @@
   "Create folders for playlists": "Crea cartelle per le playlist",
   "About": "Informazioni",
   "Links:": "Link:",
-  "Telegram Releases": "Rilasci su Telegram",
+  "Telegram Releases": "Canale Telegram (releases)",
   "Telegram Group": "Gruppo Telegram",
   "Discord": "Discord",
-  "Telegram Android Group": "Gruppo Telegram Android",
+  "Telegram Android Group": "Gruppo Telegram per Android",
   "Credits:": "Crediti:",
   "Agree": "Accetta",
   "Dismiss": "Rifiuta",
@@ -129,13 +129,13 @@
   "Playlist deleted!": "Playlist eliminata!",
   "Delete": "Elimina",
   "Are you sure you want to delete this playlist?": "Sei sicuro di voler eliminare questa playlist?",
-  "Force white tray icon": "Forza icona bianca nel vassoio",
-  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Forza l'icona predefinita (bianca) nel vassoio se il tema è stato rilevato in modo errato. Richiede il riavvio.",
+  "Force white tray icon": "Forza icona bianca nell'area notifiche",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Forza l'icona predefinita (bianca) nell'area notifiche se il tema è stato rilevato in modo errato. Richiede il riavvio.",
   "Share": "Condividi",
   "Settings quality": "Qualità delle Impostazioni",
   "Content language": "Lingua dei contenuti",
-  "Content country": "Contenuto del Paese",
-  "Website": "Website",
-  "Visit website": "Visit website",
-  "New update available:": "New update available:"
+  "Content country": "Paese dei contenuti",
+  "Website": "Sito Web",
+  "Visit website": "Visita il sito",
+  "New update available:": "Nuovo aggiornamento disponibile:"
 }
