--- a/app/client/src/locales/pt.json
+++ b/app/client/src/locales/pt.json
@@ -39,7 +39,7 @@
   "Add to queue": "Adicionar à fila",
   "Remove from library": "Remover da biblioteca",
   "Remove from playlist": "Remover da playlist",
-  "Play track mix": "Reproduzir mistura de trilha",
+  "Play track mix": "Reproduzir mix da faixa",
   "Go to": "Ir para",
   "Track Mix": "Faixa Mix",
   "Duration": "Duração",
