--- a/app/client/src/locales/ru.json
+++ b/app/client/src/locales/ru.json
@@ -119,11 +119,11 @@
   "Telegram Group": "Группа в Telegram",
   "Discord": "Discord",
   "Telegram Android Group": "Обсуждение Freezer Android",
-  "Credits:": "Благодарность:",
-  "Agree": "Согласен",
+  "Credits:": "Благодарности:",
+  "Agree": "Принять",
   "Dismiss": "Отмена",
   "Added to playlist!": "Добавлено в плейлист!",
-  "Added to library!": "Добавлено в избранное!",
+  "Added to library!": "Добавлено в Избранное!",
   "Removed from library!": "Удалено из Избранного!",
   "Removed from playlist!": "Удалено из плейлиста!",
   "Playlist deleted!": "Плейлист удален!",
@@ -135,7 +135,7 @@
   "Settings quality": "Качество настроек",
   "Content language": "Язык контента",
   "Content country": "Страна контента",
-  "Website": "Website",
-  "Visit website": "Visit website",
-  "New update available:": "New update available:"
+  "Website": "Веб-сайт",
+  "Visit website": "Посетить веб-сайт",
+  "New update available:": "Доступна новая версия:"
 }
