--- a/app/client/src/locales/sk.json
+++ b/app/client/src/locales/sk.json
@@ -110,11 +110,11 @@
   "Settings saved!": "Nastavenia uložené!",
   "Available only in Electron version!": "Iba vo verzii Electron!",
   "Crossfade (ms)": "Prelínanie (ms)",
-  "Select primary color": "Vybrať primárnu farbu",
+  "Select primary color": "Hlavná farba",
   "Light theme": "Svetlá téma",
   "Create folders for playlists": "Vytvoriť priečinky pre playlisty",
   "About": "O aplikácii",
-  "Links:": "Linky:",
+  "Links:": "Odkazy:",
   "Telegram Releases": "Telegram vydania",
   "Telegram Group": "Telegram skupina",
   "Discord": "Discord",
