--- a/app/client/src/locales/fil.json
+++ b/app/client/src/locales/fil.json
@@ -24,9 +24,9 @@
   "History": "History",
   "Create new playlist": "Gumawa ng bagong playlist",
   "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
+  "Sort by": "Ayusin ayon sa",
   "Date Added": "Petsa kung kailan idinagdag",
-  "Name (A-Z)": "Name (A-Z)",
+  "Name (A-Z)": "Pangalan (A-Z)",
   "Artist (A-Z)": "Artista (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
   "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
@@ -42,7 +42,7 @@
   "Play track mix": "Play track mix",
   "Go to": "Pumunta sa",
   "Track Mix": "Track Mix",
-  "Duration": "Duration",
+  "Duration": "Tagal",
   "Released": "Released",
   "Disk": "Disk",
   "albums": "Mga album",
@@ -64,7 +64,7 @@
   "Track number": "Track number",
   "Disk number": "Disk number",
   "Explicit": "Explicit",
-  "Source": "Source",
+  "Source": "Pinagmulan",
   "ID": "ID",
   "Error logging in!": "Error logging in!",
   "Please try again later, or try another account.": "Paki-subukan ulit mamaya, o mag-try ng ibang account.",
@@ -120,12 +120,12 @@
   "Discord": "Discord",
   "Telegram Android Group": "Telegram Android Group",
   "Credits:": "Credits:",
-  "Agree": "Agree",
+  "Agree": "Sumang-ayon",
   "Dismiss": "Dismiss",
   "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
+  "Added to library!": "Idinagdag na sa library!",
+  "Removed from library!": "Tinanggal sa library!",
+  "Removed from playlist!": "Tinanggal sa playlist!",
   "Playlist deleted!": "Playlist deleted!",
   "Delete": "Delete",
   "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?",
@@ -136,6 +136,6 @@
   "Content language": "Wika ng nilalaman",
   "Content country": "Bansa ng nilalaman",
   "Website": "Website",
-  "Visit website": "Visit website",
-  "New update available:": "New update available:"
+  "Visit website": "Bisitahin ang website",
+  "New update available:": "May bagong update na:"
 }
