--- a/app/client/src/locales/uk.json
+++ b/app/client/src/locales/uk.json
@@ -39,14 +39,14 @@
   "Add to queue": "Додати до черги",
   "Remove from library": "Видалити з бібліотеки",
   "Remove from playlist": "Видалити з плейлиста",
-  "Play track mix": "Відтворити трек мікс",
+  "Play track mix": "Відтворити мікс треків",
   "Go to": "Перейти до",
   "Track Mix": "Трек Мікс",
   "Duration": "Тривалість",
   "Released": "Реліз",
   "Disk": "Диск",
   "albums": "альбоми",
-  "Play top": "Відтворити top",
+  "Play top": "Відтворити топ",
   "Radio": "Радіо",
   "Show all albums": "Показати всі альбоми",
   "Show all singles": "Показати всі композиції",
@@ -71,7 +71,7 @@
   "Logout": "Вийти",
   "Login using browser": "Вхід через браузер",
   "Please login using your Deezer account:": "Будь ласка, увійдіть, використовуючи свій обліковий запис Deezer:",
-  "...or paste your ARL/Token below:": "...або вставте свій ARL/Token нижче:",
+  "...or paste your ARL/Token below:": "...або вставте свій ARL/токен нижче:",
   "ARL/Token": "ARL/токен",
   "Login": "Увійти",
   "By using this program, you disagree with Deezer's ToS.": "Використовуючи цю програму, ви не погоджуєтесь із умовами використання Deezer.",
@@ -85,7 +85,7 @@
   "Downloads Directory": "Тека для завантажень",
   "Simultaneous downloads": "Одночасних завантажень",
   "Always show download confirm dialog before downloading.": "Завжди показувати вікно підтвердження перед завантаженням.",
-  "Show download dialog": "Показувати діалогове вікно звантаження",
+  "Show download dialog": "Показувати діалогове вікно завантаження",
   "Create folders for artists": "Створити теки для виконавців",
   "Create folders for albums": "Створити теки для альбомів",
   "Download lyrics": "Завантажити тексти пісень",
@@ -130,8 +130,8 @@
   "Delete": "Видалити",
   "Are you sure you want to delete this playlist?": "Ви впевнені, що хочете видалити цей плейлист?",
   "Force white tray icon": "Примусово використовувати білий значок трею",
-  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Примусово використовувати (білий) значок, якщо тема визначена неправильно. Необхідне перезавантаження.",
-  "Share": "Поширити",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Примусово використовувати стандартний (білий) значок, якщо тема визначена неправильно. Необхідне перезавантаження.",
+  "Share": "Поділитись",
   "Settings quality": "Налаштування якості",
   "Content language": "Мова контенту",
   "Content country": "Країна контенту",
