--- a/app/client/src/locales/ast.json
+++ b/app/client/src/locales/ast.json
@@ -137,8 +137,5 @@
   "Content country": "Content country",
   "Website": "Website",
   "Visit website": "Visit website",
-  "New update available:": "New update available:",
-  "Shuffle": "Shuffle",
-  "Download album cover": "Download album cover",
-  "Art Resolution": "Art Resolution"
+  "New update available:": "New update available:"
 }
