--- a/app/client/src/locales/de.json
+++ b/app/client/src/locales/de.json
@@ -36,7 +36,7 @@
   "Create new": "Neu erstellen",
   "Remove": "Entfernen",
   "Play next": "Als Nächstes abspielen",
-  "Add to queue": "Zur Warteschleife hinzufügen",
+  "Add to queue": "In die Wiedergabeliste",
   "Remove from library": "Aus der Mediathek entfernen",
   "Remove from playlist": "Aus Playlist entfernen",
   "Play track mix": "Songmix abspielen",
@@ -52,7 +52,7 @@
   "Show all singles": "Zeige alle Singles",
   "Show more": "Mehr anzeigen",
   "Downloaded": "Heruntergeladen",
-  "Queue": "Warteschleife",
+  "Queue": "Wiedergabeliste",
   "Total": "Gesamt",
   "Stop": "Stop",
   "Start": "Start",
@@ -115,7 +115,7 @@
   "Create folders for playlists": "Ordner für Playlists erstellen",
   "About": "Über",
   "Links:": "Links:",
-  "Telegram Releases": "Telegram-Releases",
+  "Telegram Releases": "Telegram Veröffentlichungen",
   "Telegram Group": "Telegram Gruppe",
   "Discord": "Discord",
   "Telegram Android Group": "Telegram Android-Gruppe",
