--- a/app/client/src/locales/es.json
+++ b/app/client/src/locales/es.json
@@ -11,7 +11,7 @@
   "Downloads": "Descargas",
   "Search or paste Deezer URL. Use / to quickly focus.": "Busca o pega la URL de Deezer. Usa \"/\" para empezar a buscar.",
   "Play": "Reproducir",
-  "Add to library": "Añadir a la biblioteca",
+  "Add to library": "Agregar a la biblioteca",
   "Download": "Descargar",
   "fans": "seguidores",
   "tracks": "canciones",
@@ -36,9 +36,9 @@
   "Create new": "Crear nuevo",
   "Remove": "Quitar",
   "Play next": "Reproducir siguiente",
-  "Add to queue": "Añadir a la cola de reproducción",
-  "Remove from library": "Eliminar de la biblioteca",
-  "Remove from playlist": "Quitar de la lista de reproducción",
+  "Add to queue": "Agregar a la cola de reproducción",
+  "Remove from library": "Remover de la biblioteca",
+  "Remove from playlist": "Remover de la lista de reproducción",
   "Play track mix": "Reproducir mezcla de canciones",
   "Go to": "Ir a",
   "Track Mix": "Mezcla de canciones",
@@ -83,7 +83,7 @@
   "Streaming Quality": "Calidad de reproducción",
   "Download Quality": "Calidad de descarga",
   "Downloads Directory": "Carpeta de descargas",
-  "Simultaneous downloads": "Descargas simultaneas máximas",
+  "Simultaneous downloads": "Descargas simultáneas",
   "Always show download confirm dialog before downloading.": "Mostrar siempre una confirmación de descarga antes de descargar.",
   "Show download dialog": "Mostrar diálogo de descargas",
   "Create folders for artists": "Crear carpetas por artistas",
