--- a/app/client/src/locales/it.json
+++ b/app/client/src/locales/it.json
@@ -121,7 +121,7 @@
   "Telegram Android Group": "Gruppo Telegram per Android",
   "Credits:": "Crediti:",
   "Agree": "Accetta",
-  "Dismiss": "Rifiuta",
+  "Dismiss": "Chiudi",
   "Added to playlist!": "Aggiunto alla playlist!",
   "Added to library!": "Aggiunto alla libreria!",
   "Removed from library!": "Rimosso dalla libreria!",
