--- a/app/client/src/locales/ro.json
+++ b/app/client/src/locales/ro.json
@@ -136,6 +136,6 @@
   "Content language": "Limbajul conținutului",
   "Content country": "Țara conținutului",
   "Website": "Website",
-  "Visit website": "Visit website",
-  "New update available:": "New update available:"
+  "Visit website": "Vizitați site-ul web",
+  "New update available:": "Actualizare nouă disponibilă:"
 }
