--- a/app/client/src/locales/tr.json
+++ b/app/client/src/locales/tr.json
@@ -1,6 +1,6 @@
 {
   "Home": "Ana Sayfa",
-  "Browse": "Gözat",
+  "Browse": "Göz at",
   "Library": "Kütüphane",
   "Tracks": "Parçalar",
   "Playlists": "Çalma listeleri",
@@ -9,18 +9,18 @@
   "More": "Daha Fazla",
   "Settings": "Ayarlar",
   "Downloads": "İndirilenler",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Arama yapın veya Deezer URL'sini yapıştırın. Hızlı odaklanmak için \"/\" kullanın.",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Arayın veya Deezer URL'sini yapıştırın. Hızlıca odaklanmak için \"/\" kullanın.",
   "Play": "Oynat",
   "Add to library": "Kütüphaneye ekle",
   "Download": "İndir",
   "fans": "hayranlar",
   "tracks": "parçalar",
   "Quality": "Kalite",
-  "Estimated size:": "Tahmini Süre:",
+  "Estimated size:": "Tahmini süre:",
   "Start downloading": "İndirmeyi başlat",
   "Cancel": "İptal Et",
-  "Stream logging is disabled!": "Akış günlüğü devre dışı bırakıldı!",
-  "Enable it in settings for history to work properly.": "Geçmişin düzgün çalışması için ayarlarda etkinleştirin.",
+  "Stream logging is disabled!": "Günlük akışı devre dışı bırakıldı!",
+  "Enable it in settings for history to work properly.": "Geçmişin düzgün çalışması için ayarlardan etkinleştirin.",
   "History": "Geçmiş",
   "Create new playlist": "Yeni çalma listesi oluştur",
   "TRACKS": "PARÇALAR",
@@ -68,7 +68,7 @@
   "ID": "ID",
   "Error logging in!": "Oturum açma hatası!",
   "Please try again later, or try another account.": "Lütfen daha sonra tekrar deneyin veya başka bir hesap deneyin.",
-  "Logout": "Çıkış",
+  "Logout": "Çıkış Yap",
   "Login using browser": "Tarayıcı kullanarak giriş yapın",
   "Please login using your Deezer account:": "Lütfen Deezer hesabınızı kullanarak giriş yapın:",
   "...or paste your ARL/Token below:": "yada ARL/Token aşağıya yapıştırın:",
@@ -80,42 +80,42 @@
   "Error loading data!": "Veri yükleme hatası!",
   "Try again later!": "Daha sonra yeniden deneyin!",
   "Search": "Ara",
-  "Streaming Quality": "Yayın Kalitesi",
-  "Download Quality": "İndirme kalitesi",
+  "Streaming Quality": "Akış Kalitesi",
+  "Download Quality": "İndirme Kalitesi",
   "Downloads Directory": "İndirme Dizini",
   "Simultaneous downloads": "Eşzamanlı indirmeler",
-  "Always show download confirm dialog before downloading.": "İndirmeden önce her zaman indirme onayı iletişim kutusunu göster.",
+  "Always show download confirm dialog before downloading.": "İndirmeden önce her zaman indirme onayı iletişim kutusunu gösterin.",
   "Show download dialog": "İndirme iletişim kutusunu göster",
-  "Create folders for artists": "Sanatçılar için klasörler oluşturun",
-  "Create folders for albums": "Albümler için klasörler oluşturun",
+  "Create folders for artists": "Sanatçılar için klasörler oluştur",
+  "Create folders for albums": "Albümler için klasörler oluştur",
   "Download lyrics": "Şarkı sözlerini indir",
   "Variables": "Değişkenler",
   "UI": "Arayüz",
-  "Show autocomplete in search": "Otomatik tamamlama listesini göster",
+  "Show autocomplete in search": "Aramada otomatik tamamlamayı göster",
   "Integrations": "Entegrasyonlar",
-  "This allows listening history, flow and recommendations to work properly.": "Bu dinleme geçmişinin, akışının ve önerilerin düzgün çalışmasını sağlar.",
-  "Log track listens to Deezer": "Dinlediyin şarkılar Deezer'da yansıtılsın",
+  "This allows listening history, flow and recommendations to work properly.": "Bu, dinleme geçmişinin, akışının ve önerilerin düzgün çalışmasını sağlar.",
+  "Log track listens to Deezer": "Dinlediğin şarkılar Deezer'da yayınlansın",
   "Connect your LastFM account to allow scrobbling.": "Scrobbling'e izin vermek için LastFM hesabınızı bağlayın.",
   "Login with LastFM": "LastFM ile giriş yapın",
   "Disconnect LastFM": "LastFM bağlantısını kes",
   "Requires restart to apply!": "Yeniden başlatma gerekli!",
   "Enable Discord Rich Presence, requires restart to toggle!": "Discord zengin içeriği etkinleştirin, geçiş yapmak için yeniden başlatma gerekir!",
-  "Discord Rich Presence": "Discord zengin içerik",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Şarkıları senkronize etmek için Discord katılma düğmesini etkinleştirin, geçiş yapmak için yeniden başlatma gerektirir!",
+  "Discord Rich Presence": "Discord Zengin İçerik",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Şarkıları senkronize etmek için Discord katıl düğmesini etkinleştirin, değişiklik yapmak yeniden başlatma gerektirir!",
   "Discord Join Button": "Discord Katılma Düğmesi",
   "Other": "Diğer",
-  "Minimize to tray": "Sistem tray'e küçülsün",
-  "Don't minimize to tray": "Sistem tray'e küçülmesin tamamen kapansın",
-  "Close on exit": "Programı kapattığınızda tamamen kapansın",
+  "Minimize to tray": "Sistem tepsisine küçült",
+  "Don't minimize to tray": "Sistem tepsisine küçültülmez",
+  "Close on exit": "Çıkışta kapat",
   "Settings saved!": "Ayarlar kaydedildi!",
   "Available only in Electron version!": "Sadece Electron versiyonunda mevcuttur!",
   "Crossfade (ms)": "Crossfade (ms)",
-  "Select primary color": "Birincil rengi seçin",
+  "Select primary color": "Ana rengi seçin",
   "Light theme": "Aydınlık tema",
   "Create folders for playlists": "Çalma listesi için klasör oluştur",
   "About": "Hakkında",
   "Links:": "Bağlantılar:",
-  "Telegram Releases": "Telegram Paylaşımları",
+  "Telegram Releases": "Telegram Sürümleri",
   "Telegram Group": "Telegram Grubu",
   "Discord": "Discord",
   "Telegram Android Group": "Telegram Android Grubu",
@@ -129,13 +129,13 @@
   "Playlist deleted!": "Çalma listesi silindi!",
   "Delete": "Sil",
   "Are you sure you want to delete this playlist?": "Bu çalma listesini silmek istediğinizden emin misiniz?",
-  "Force white tray icon": "Sistem tray'deki beyaz ikon olmasını zorla",
-  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Eğer tema doğru tespitlenmediyse sistem tray'deki varsayılan (beyaz) ikon olmasını zorla. Yeniden başlatma gerekli.",
+  "Force white tray icon": "Tepsi simgesini beyaz olmaya zorla",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Tema yanlış algılanırsa varsayılan (beyaz) tepsi simgesini zorlar. Yeniden başlatma gerektirir.",
   "Share": "Paylaş",
   "Settings quality": "Kalite ayarları",
   "Content language": "İçerik dili",
   "Content country": "İçerik ülkesi",
   "Website": "İnternet sitesi",
-  "Visit website": "İnternet sitesini ziyaret et",
+  "Visit website": "Web sitesine git",
   "New update available:": "Yeni güncelleme mevcut:"
 }
