--- a/app/client/src/locales/ko.json
+++ b/app/client/src/locales/ko.json
@@ -1,141 +1,141 @@
 {
-  "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
+  "Home": "홈",
+  "Browse": "탐색",
+  "Library": "라이브러리",
+  "Tracks": "트랙",
+  "Playlists": "재생목록",
+  "Albums": "앨범",
+  "Artists": "아티스트",
+  "More": "더 보기",
+  "Settings": "설정",
+  "Downloads": "다운로드",
   "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
+  "Play": "재생",
+  "Add to library": "라이브러리에 추가",
+  "Download": "다운로드",
   "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
+  "tracks": "트랙",
+  "Quality": "음질",
+  "Estimated size:": "예상 용량:",
+  "Start downloading": "다운로드 시작",
+  "Cancel": "취소",
   "Stream logging is disabled!": "Stream logging is disabled!",
   "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
-  "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
+  "History": "기록",
+  "Create new playlist": "새 재생목록 만들기",
+  "TRACKS": "트랙",
+  "Sort by": "정렬 기준",
+  "Date Added": "추가된 날짜",
+  "Name (A-Z)": "이름 (A-Z)",
+  "Artist (A-Z)": "아티스트 (A-Z)",
+  "Album (A-Z)": "앨범 (A-Z)",
+  "Error loading lyrics or lyrics not found!": "가사 로딩 오류 또는 가사 없음!",
+  "Create playlist": "재생목록 생성",
+  "Create": "생성",
+  "Add to playlist": "재생목록에 추가",
+  "Create new": "새로 만들기",
+  "Remove": "제거",
+  "Play next": "다음 재생",
+  "Add to queue": "대기열에 추가",
+  "Remove from library": "라이브러리에서 삭제",
+  "Remove from playlist": "재생목록에서 삭제",
   "Play track mix": "Play track mix",
-  "Go to": "Go to",
+  "Go to": "$로 이동",
   "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
+  "Duration": "길이",
+  "Released": "출시됨",
   "Disk": "Disk",
-  "albums": "albums",
+  "albums": "앨범",
   "Play top": "Play top",
-  "Radio": "Radio",
-  "Show all albums": "Show all albums",
+  "Radio": "라디오",
+  "Show all albums": "모든 앨범 보기",
   "Show all singles": "Show all singles",
   "Show more": "Show more",
   "Downloaded": "Downloaded",
   "Queue": "Queue",
-  "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
-  "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
+  "Total": "총",
+  "Stop": "정지",
+  "Start": "시작",
+  "Show folder": "폴더 보기",
+  "Clear queue": "대기열 비우기",
+  "Playing from": "$부터 재생:",
+  "Info": "정보",
+  "Lyrics": "가사",
+  "Track number": "트랙 번호",
   "Disk number": "Disk number",
   "Explicit": "Explicit",
   "Source": "Source",
-  "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "ID": "아이디",
+  "Error logging in!": "로그인 오류",
+  "Please try again later, or try another account.": "나중에 시도하거나 다른 계정으로 시도해주세요.",
+  "Logout": "로그아웃",
+  "Login using browser": "브라우저를 사용하여 로그인",
+  "Please login using your Deezer account:": "Deezer 계정을 사용하여 로그인하십시오.",
+  "...or paste your ARL/Token below:": "...혹은 아래에 ARL/Token을 붙여넣으세요",
   "ARL/Token": "ARL/Token",
-  "Login": "Login",
+  "Login": "로그인",
   "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
   "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
+  "Search results for:": "다음에 대한 검색 결과:",
+  "Error loading data!": "데이터 로딩 오류!",
+  "Try again later!": "나중에 다시 시도해주세요!",
+  "Search": "검색",
+  "Streaming Quality": "스트리밍 음질",
+  "Download Quality": "다운로드 음질",
+  "Downloads Directory": "다운로드 위치",
+  "Simultaneous downloads": "동시 다운로드",
   "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
   "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
-  "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
+  "Create folders for artists": "가수 용 폴더 만들기",
+  "Create folders for albums": "앨범 용 폴더 만들기",
+  "Download lyrics": "가사 다운로드",
+  "Variables": "변수",
+  "UI": "인터페이스",
+  "Show autocomplete in search": "검색에 자동완성 보이기",
   "Integrations": "Integrations",
   "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
   "Log track listens to Deezer": "Log track listens to Deezer",
   "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
+  "Login with LastFM": "LastFM에 로그인",
   "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
+  "Requires restart to apply!": "변경사항을 적용하려면 재시작이 필요합니다!",
   "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
   "Discord Rich Presence": "Discord Rich Presence",
   "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
   "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
+  "Other": "기타",
+  "Minimize to tray": "트레이로 최소화",
+  "Don't minimize to tray": "트레이로 최소화하지 않기",
+  "Close on exit": "종료시 닫기",
+  "Settings saved!": "설정이 저장되었습니다!",
   "Available only in Electron version!": "Available only in Electron version!",
   "Crossfade (ms)": "Crossfade (ms)",
   "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
-  "About": "About",
-  "Links:": "Links:",
+  "Light theme": "밝은 테마",
+  "Create folders for playlists": "플레이리스트 용 폴더 만들기",
+  "About": "정보",
+  "Links:": "링크:",
   "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "Telegram Group": "텔레그램 그룹",
   "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
-  "Agree": "Agree",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?",
+  "Telegram Android Group": "안드로이드 텔레그램 그룹",
+  "Credits:": "크레딧:",
+  "Agree": "동의",
+  "Dismiss": "무시하기",
+  "Added to playlist!": "재생목록에 추가되었습니다!",
+  "Added to library!": "라이브러리에 추가되었습니다!",
+  "Removed from library!": "라이브러리에서 삭제되었습니다!",
+  "Removed from playlist!": "재생목록에서 삭제되었습니다!",
+  "Playlist deleted!": "재생목록이 삭제되었습니다!",
+  "Delete": "삭제",
+  "Are you sure you want to delete this playlist?": "이 재생목록을 삭제하시겠습니까?",
   "Force white tray icon": "Force white tray icon",
   "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Force default (white) tray icon if theme incorrectly detected. Requires restart.",
-  "Share": "Share",
+  "Share": "공유",
   "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country",
-  "Website": "Website",
-  "Visit website": "Visit website",
-  "New update available:": "New update available:"
+  "Content language": "콘텐츠 언어",
+  "Content country": "콘텐츠 국가",
+  "Website": "홈페이지",
+  "Visit website": "홈페이지 방문하기",
+  "New update available:": "사용 가능한 업데이트가 있습니다:"
 }
