--- a/app/client/src/locales/vi.json
+++ b/app/client/src/locales/vi.json
@@ -9,133 +9,133 @@
   "More": "Thêm",
   "Settings": "Cài đặt",
   "Downloads": "Danh sách tải",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
-  "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Tìm kiếm hoặc dán URL Deezer.",
+  "Play": "Phát",
+  "Add to library": "Thêm vào thư viện",
+  "Download": "Tải xuống",
+  "fans": "người hâm mộ",
+  "tracks": "bài hát",
+  "Quality": "Chất lượng",
+  "Estimated size:": "Kích thước dự tính:",
+  "Start downloading": "Bắt đầu tải xuống",
+  "Cancel": "Hủy",
+  "Stream logging is disabled!": "Đã tắt nhật kí phát trực tuyến!",
+  "Enable it in settings for history to work properly.": "Kích hoạt chế độ này trong cài đặt để lịch sử nghe hoạt động bình thường.",
+  "History": "Lịch sử",
+  "Create new playlist": "Tạo danh sách phát mới",
+  "TRACKS": "BÀI HÁT",
+  "Sort by": "Sắp xếp theo",
+  "Date Added": "Ngày thêm vào",
+  "Name (A-Z)": "Tên (A-Z)",
+  "Artist (A-Z)": "Nghệ sĩ (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
-  "Disk": "Disk",
-  "albums": "albums",
-  "Play top": "Play top",
+  "Error loading lyrics or lyrics not found!": "Lỗi tải lời bài hát hoặc lời bài hát không tồn tại!",
+  "Create playlist": "Tạo danh sách phát",
+  "Create": "Tạo",
+  "Add to playlist": "Thêm vào danh sách phát",
+  "Create new": "Tạo mới",
+  "Remove": "Loại bỏ",
+  "Play next": "Phát kế tiếp",
+  "Add to queue": "Thêm vào hàng chờ",
+  "Remove from library": "Xoá khỏi Thư Viện",
+  "Remove from playlist": "Xóa khỏi danh sách phát",
+  "Play track mix": "Phát trộn bài hát",
+  "Go to": "Đi đến",
+  "Track Mix": "Trộn bài hát",
+  "Duration": "Thời lượng",
+  "Released": "Phát hành",
+  "Disk": "Đĩa",
+  "albums": "album",
+  "Play top": "Phát từ đầu",
   "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
-  "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
-  "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
-  "Source": "Source",
+  "Show all albums": "Hiện tất cả album",
+  "Show all singles": "Hiển thị tất cả đĩa đơn",
+  "Show more": "Hiển thị thêm",
+  "Downloaded": "Đã tải xuống",
+  "Queue": "Hàng chờ",
+  "Total": "Tổng",
+  "Stop": "Dừng",
+  "Start": "Bắt đầu",
+  "Show folder": "Hiển thị trong thư mục",
+  "Clear queue": "Xóa hàng chờ",
+  "Playing from": "Phát từ",
+  "Info": "Thông tin",
+  "Lyrics": "Lời bài hát",
+  "Track number": "Số thứ tự bài hát",
+  "Disk number": "Số thứ tự đĩa",
+  "Explicit": "18+",
+  "Source": "Nguồn",
   "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Error logging in!": "Lỗi đăng nhập!",
+  "Please try again later, or try another account.": "Vui lòng thử lại sau, hoặc thử lại bằng tài khoản khác.",
+  "Logout": "Đăng xuất",
+  "Login using browser": "Đăng nhập bằng trình duyệt",
+  "Please login using your Deezer account:": "Xin vui lòng đăng nhập bằng tài khoản Deezer của bạn:",
+  "...or paste your ARL/Token below:": "...hoặc dán mã ARL/Token vào đây:",
   "ARL/Token": "ARL/Token",
-  "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
-  "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
+  "Login": "Đăng nhập",
+  "By using this program, you disagree with Deezer's ToS.": "Với việc sử dụng ứng dụng này, bạn đã từ chối điều khoản dịch vụ của Deezer.",
+  "Only in Electron version!": "Chỉ có trong phiên bản electron!",
+  "Search results for:": "Kết quả tìm kiếm cho:",
+  "Error loading data!": "Lỗi khi tải dữ liệu!",
+  "Try again later!": "Thử lại sau!",
+  "Search": "Tìm kiếm",
+  "Streaming Quality": "Chất lượng phát trực tuyến",
+  "Download Quality": "Chất lượng tải xuống",
+  "Downloads Directory": "Thư mục tải xuống",
+  "Simultaneous downloads": "Tải xuống đồng thời",
+  "Always show download confirm dialog before downloading.": "Luôn hiển thị hộp thoại xác nhận tải xuống trước khi tải xuống.",
+  "Show download dialog": "Hiển thị hộp thoại tải xuống",
+  "Create folders for artists": "Tạo thư mục theo tên nghệ sĩ",
+  "Create folders for albums": "Tạo thư mục theo tên album",
+  "Download lyrics": "Tải xuống lời bài hát",
+  "Variables": "Các biến số",
+  "UI": "Giao diện",
+  "Show autocomplete in search": "Hiển thị tự động hoàn thành trong tìm kiếm",
+  "Integrations": "Tích hợp",
+  "This allows listening history, flow and recommendations to work properly.": "Điều này giúp lịch sử nghe, phát nhạc thông minh (flow) và đề xuất hoạt động bình thường.",
+  "Log track listens to Deezer": "Lưu nhật ký nhạc đã nghe cho Deezer",
+  "Connect your LastFM account to allow scrobbling.": "Kết nối tài khoản LastFM của bạn để sử dụng hệ thống phát thông minh của LastFM (scrobbling).",
+  "Login with LastFM": "Đăng nhập tài khoản LastFM",
+  "Disconnect LastFM": "Đăng xuất LastFM",
+  "Requires restart to apply!": "Khởi động lại ứng dụng để áp dụng!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Bật tính năng Discord Rich Presence, yêu cầu khởi động lại để chuyển đổi!",
   "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!",
-  "Crossfade (ms)": "Crossfade (ms)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
-  "About": "About",
-  "Links:": "Links:",
-  "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Bật nút tham gia Discord để đồng bộ các bài hát, yêu cầu khởi động lại để chuyển đổi!",
+  "Discord Join Button": "Nút tham gia Discord",
+  "Other": "Khác",
+  "Minimize to tray": "Thu xuống khay hệ thống",
+  "Don't minimize to tray": "Không thu xuống khay hệ thống",
+  "Close on exit": "Đóng khi thoát",
+  "Settings saved!": "Cài đặt đã lưu!",
+  "Available only in Electron version!": "Chỉ có ở phiên bản Electron!",
+  "Crossfade (ms)": "Khoảng lặng (ms)",
+  "Select primary color": "Chọn màu chính",
+  "Light theme": "Màu sáng",
+  "Create folders for playlists": "Tạo thư mục theo danh sách phát",
+  "About": "Giới thiệu",
+  "Links:": "Liên kết:",
+  "Telegram Releases": "Các bản phát hành trên Telegram",
+  "Telegram Group": "Nhóm Telegram",
   "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
-  "Agree": "Agree",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?",
-  "Force white tray icon": "Force white tray icon",
-  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Force default (white) tray icon if theme incorrectly detected. Requires restart.",
-  "Share": "Share",
-  "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country",
-  "Website": "Website",
-  "Visit website": "Visit website",
-  "New update available:": "New update available:"
+  "Telegram Android Group": "Nhóm Telegram Android",
+  "Credits:": "Đóng góp:",
+  "Agree": "Đồng ý",
+  "Dismiss": "Đóng",
+  "Added to playlist!": "Đã thêm vào danh sách phát!",
+  "Added to library!": "Đã thêm vào Thư viện!",
+  "Removed from library!": "Đã xoá khỏi thư viện!",
+  "Removed from playlist!": "Đã xóa khỏi danh sách phát!",
+  "Playlist deleted!": "Đã xoá danh sách phát!",
+  "Delete": "Xóa",
+  "Are you sure you want to delete this playlist?": "Bạn có chắc chắn muốn xóa danh sách phát này?",
+  "Force white tray icon": "Buộc biểu tượng khay hệ thống màu trắng",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Buộc biểu tượng khay mặc định (trắng) nếu không phát hiện được chủ đề. Khởi động lại để áp dụng.",
+  "Share": "Chia sẻ",
+  "Settings quality": "Cài đặt chất lượng",
+  "Content language": "Ngôn ngữ nội dung",
+  "Content country": "Quốc gia của nội dung",
+  "Website": "Trang web",
+  "Visit website": "Truy cập trang web",
+  "New update available:": "Có bản cập nhật mới:"
 }
