--- a/app/client/src/locales/en.json
+++ b/app/client/src/locales/en.json
@@ -146,5 +146,12 @@
   "Collaborative": "Collaborative",
   "Edit playlist": "Edit playlist",
   "Save": "Save",
-  "Edit": "Edit"
+  "Edit": "Edit",
+  "Importer": "Importer",
+  "Enter URL": "Enter URL",
+  "Currently only Spotify is supported and limited to 100 tracks.": "Currently only Spotify is supported and limited to 100 tracks.",
+  "Import into playlist": "Import into playlist",
+  "Keep sidebar open": "Keep sidebar open",
+  "WARNING: Might require reload to work properly!": "WARNING: Might require reload to work properly!",
+  "An error occured, URL might be invalid or unsupported.": "An error occured, URL might be invalid or unsupported."
 }
